fix(ui): correct cart item layout issue

--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ h1 {
     height:40px;
     margin-right:20px;
 }
-.cart--item-nome {
+.cart--item-name {
     flex:1;
 }
 .cart--item--qtarea {
